--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio - Berkan Cetinbag</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/flexboxgrid.min.css" type="text/css">
+    <script src="portfolio-modal.js"></script> <!-- Link to your JavaScript file -->
 </head>
 <body>
     <div class="container">
-        <header>
-            <div class="header-content">
+        <header class="row center-xs">
+            <div class="header-content col-xs-12 col-md-4 center-xs">
                 <nav>
                     <ul>
                         <li><a href="#">Works</a></li>
@@ -22,53 +24,53 @@
         </header>
 
         <main>
-            <section class="portfolio">
-                <div class="portfolio-item">
-                    <img src="Aemond.png" alt="Aemond & Vhagar">
+            <section class="portfolio row">
+                <div class="portfolio-item col-xs-12 col-md-3">
+                    <img src="img/Aemond.png" alt="Aemond & Vhagar">
                     <p>Aemond & Vhagar</p>
                 </div>
-                <div class="portfolio-item">
-                    <img src="Traston - Calamity.jpg" alt="Traston & Calamity">
+                <div class="portfolio-item col-xs-12 col-md-3">
+                    <img src="img/Traston - Calamity.jpg" alt="Traston & Calamity">
                     <p>Traston & Calamity</p>
                 </div>
-                <div class="portfolio-item">
-                    <img src="Dyer.jpg" alt="Dyer">
+                <div class="portfolio-item col-xs-12 col-md-3">
+                    <img src="img/Dyer.jpg" alt="Dyer">
                     <p>Dyer</p>
                 </div>
-                <div class="portfolio-item">
-                    <img src="Vicer.jpg" alt="Vicer">
+                <div class="portfolio-item col-xs-12 col-md-3">
+                    <img src="img/Vicer.jpg" alt="Vicer">
                     <p>Vicer</p>
                 </div>
-                <div class="portfolio-item">
-                    <img src="Lyssa.jpg" alt="Lyssa">
+                <div class="portfolio-item col-xs-12 col-md-3">
+                    <img src="img/Lyssa.jpg" alt="Lyssa">
                     <p>Lyssa</p>
                 </div>
-                <div class="portfolio-item">
-                    <img src="Traston - Version 2.jpg" alt="Traston">
+                <div class="portfolio-item col-xs-12 col-md-3">
+                    <img src="img/Traston - Version 2.jpg" alt="Traston">
                     <p>Traston</p>
                 </div>
-                <div class="portfolio-item">
-                    <img src="Teryn Aetherson.jpg" alt="Teryn Aetherson">
+                <div class="portfolio-item col-xs-12 col-md-3">
+                    <img src="img/Teryn Aetherson.jpg" alt="Teryn Aetherson">
                     <p>Teryn Aetherson</p>
                 </div>
-                <div class="portfolio-item">
-                    <img src="Hush.jpg" alt="Hush">
+                <div class="portfolio-item col-xs-12 col-md-3">
+                    <img src="img/Hush.jpg" alt="Hush">
                     <p>Hush</p>
                 </div>
-                <div class="portfolio-item">
-                    <img src="Walton Parthall.jpg" alt="Walton Parthall">
+                <div class="portfolio-item col-xs-12 col-md-3">
+                    <img src="img/Walton Parthall.jpg" alt="Walton Parthall">
                     <p>Walton Parthall</p>
                 </div>
-                <div class="portfolio-item">
-                    <img src="Valthos - Version 1.jpg" alt="Valthos">
+                <div class="portfolio-item col-xs-12 col-md-3">
+                    <img src="img/Valthos - Version 1.jpg" alt="Valthos">
                     <p>Valthos</p>
                 </div>
-                <div class="portfolio-item">
-                    <img src="Carmilla.jpg" alt="Carmilla">
+                <div class="portfolio-item col-xs-12 col-md-3">
+                    <img src="img/Carmilla.jpg" alt="Carmilla">
                     <p>Carmilla</p>
                 </div>
-                <div class="portfolio-item">
-                    <img src="The Masque.jpg" alt="The Masque">
+                <div class="portfolio-item col-xs-12 col-md-3">
+                    <img src="img/The Masque.jpg" alt="The Masque">
                     <p>The Masque</p>
                 </div>
             </section>
