added item page

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio - Berkan Cetinbag</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="css/flexboxgrid.min.css" type="text/css">
-    <script src="portfolio-modal.js"></script> <!-- Link to your JavaScript file -->
+    <link rel="stylesheet" href="flexboxgrid.min.css" type="text/css">
+
 </head>
 <body>
     <div class="container">
@@ -14,8 +14,8 @@
             <div class="header-content col-xs-12 col-md-4 center-xs">
                 <nav>
                     <ul>
-                        <li><a href="#">Works</a></li>
-                        <li><a href="#">About Me</a></li>
+                        <li><a href="index.html">Works</a></li>
+                        <li><a href="about.html">About Me</a></li>
                     </ul>
                 </nav>
                 <h1>BERKAN CETINBAG</h1>
@@ -24,52 +24,52 @@
         </header>
 
         <main>
-            <section class="portfolio row">
-                <div class="portfolio-item col-xs-12 col-md-3">
-                    <img src="img/Aemond.png" alt="Aemond & Vhagar">
+            <section class="portfolio">
+                <div class="portfolio-item">
+                    <a href="item.html"><img src="img/Aemond.png" alt="Aemond & Vhagar"></a>
                     <p>Aemond & Vhagar</p>
                 </div>
-                <div class="portfolio-item col-xs-12 col-md-3">
+                <div class="portfolio-item">
                     <img src="img/Traston - Calamity.jpg" alt="Traston & Calamity">
                     <p>Traston & Calamity</p>
                 </div>
-                <div class="portfolio-item col-xs-12 col-md-3">
+                <div class="portfolio-item">
                     <img src="img/Dyer.jpg" alt="Dyer">
                     <p>Dyer</p>
                 </div>
-                <div class="portfolio-item col-xs-12 col-md-3">
+                <div class="portfolio-item">
                     <img src="img/Vicer.jpg" alt="Vicer">
                     <p>Vicer</p>
                 </div>
-                <div class="portfolio-item col-xs-12 col-md-3">
+                <div class="portfolio-item">
                     <img src="img/Lyssa.jpg" alt="Lyssa">
                     <p>Lyssa</p>
                 </div>
-                <div class="portfolio-item col-xs-12 col-md-3">
+                <div class="portfolio-item">
                     <img src="img/Traston - Version 2.jpg" alt="Traston">
                     <p>Traston</p>
                 </div>
-                <div class="portfolio-item col-xs-12 col-md-3">
+                <div class="portfolio-item">
                     <img src="img/Teryn Aetherson.jpg" alt="Teryn Aetherson">
                     <p>Teryn Aetherson</p>
                 </div>
-                <div class="portfolio-item col-xs-12 col-md-3">
+                <div class="portfolio-item">
                     <img src="img/Hush.jpg" alt="Hush">
                     <p>Hush</p>
                 </div>
-                <div class="portfolio-item col-xs-12 col-md-3">
+                <div class="portfolio-item">
                     <img src="img/Walton Parthall.jpg" alt="Walton Parthall">
                     <p>Walton Parthall</p>
                 </div>
-                <div class="portfolio-item col-xs-12 col-md-3">
+                <div class="portfolio-item">
                     <img src="img/Valthos - Version 1.jpg" alt="Valthos">
                     <p>Valthos</p>
                 </div>
-                <div class="portfolio-item col-xs-12 col-md-3">
+                <div class="portfolio-item">
                     <img src="img/Carmilla.jpg" alt="Carmilla">
                     <p>Carmilla</p>
                 </div>
-                <div class="portfolio-item col-xs-12 col-md-3">
+                <div class="portfolio-item">
                     <img src="img/The Masque.jpg" alt="The Masque">
                     <p>The Masque</p>
                 </div>
