Changes and more changes

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio Item - Berkan Cetinbag</title>
+    <title>About Me - Berkan Cetinbag</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="flexboxgrid.min.css" type="text/css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -27,9 +27,15 @@
         </header>
 
         <main>
-            <div class="portfolio-item-page">
-                <img src="img/Aemond.png" alt="Aemond & Vhagar">
-                <p>Aemond & Vhagar</p>
+            <div class="portfolio-about-page">
+                <img src="img/berkan.jpg" alt="Berkan">
+                <p>I'm Berkan, a 24-year-old architect and freelance artist with a lifelong passion for drawing, focusing on fantasy art and character design. Originally from Turkey, I grew up in the UAE, and now live in Spain, where I continue to refine and evolve my art and architecture.<br><br>
+
+                    My background as an architect has made me a top-tier designer, giving me a strong foundation in structure, precision, and detail, qualities that shine through in my art. This blend of skills allows me to create intricate, immersive pieces with a level of detail and realism that sets my work apart.<br><br>
+                    
+                    When I work on commissions, I make it a priority to collaborate closely with my clients. I provide daily updates and encourage ongoing feedback to ensure the final result is exactly what the client envisioned.
+                    
+                    Feel free to contact me at berkancetinbag@gmail.com to learn more about my art or discuss a potential project.</p>
             </div>
         </main>
 
