--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Portfolio - Berkan Cetinbag</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="flexboxgrid.min.css" type="text/css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 
 </head>
 <body>
@@ -20,7 +23,7 @@
                 </nav>
                 <h1>BERKAN CETINBAG</h1>
             </div>
-            <a href="#" class="instagram-icon"></a>
+            <a href="https://www.instagram.com/berkancet/" class="instagram-icon" target="_blank" rel="noopener noreferrer"></a>
         </header>
 
         <main>
