--- a/item.html
+++ b/item.html
@@ -29,8 +29,10 @@
         <main>
             <div class="portfolio-item-page">
                 <img src="img/Aemond.png" alt="Aemond & Vhagar">
-                <p>Aemond & Vhagar</p>
-            </div>
+                <div class="drawing-info">
+                    <p>Aemond & Vhagar</p>
+                    <p>August 2024</p>
+                </div>
         </main>
 
         <footer>
