--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
                     
                     When I work on commissions, I make it a priority to collaborate closely with my clients. I provide daily updates and encourage ongoing feedback to ensure the final result is exactly what the client envisioned.
                     
-                    Feel free to contact me at berkancetinbag@gmail.com to learn more about my art or discuss a potential project.</p>
+                    You can contact me at <strong>berkancetinbag@gmail.com</strong> to learn more about my art or discuss a potential project.</p>
             </div>
         </main>
 
