--- a/item.html
+++ b/item.html
@@ -29,9 +29,9 @@
         <main>
             <div class="portfolio-item-page">
                 <img src="img/Aemond.png" alt="Aemond & Vhagar">
-                <div class="drawing-info">
-                    <p>Aemond & Vhagar</p>
-                    <p>August 2024</p>
+                <div class="text-container">
+                    <span class="left-text">Aemond & Vhagar</span>
+                    <span class="right-text">August 2024</span>
                 </div>
         </main>
 
