--- a/index.html
+++ b/index.html
@@ -29,51 +29,51 @@
         <main>
             <section class="portfolio">
                 <div class="portfolio-item">
-                    <a href="item.html"><img src="img/Aemond.png" alt="Aemond & Vhagar"></a>
+                    <a href="item-aemond-vhagar.html"><img src="img/Aemond.png" alt="Aemond & Vhagar"></a>
                     <p>Aemond & Vhagar</p>
                 </div>
                 <div class="portfolio-item">
-                    <img src="img/Traston - Calamity.jpg" alt="Traston & Calamity">
+                    <a href="item-traston-calamity.html"><img src="img/Traston - Calamity.jpg" alt="Traston & Calamity"></a>
                     <p>Traston & Calamity</p>
                 </div>
                 <div class="portfolio-item">
-                    <img src="img/Dyer.jpg" alt="Dyer">
+                    <a href="item-dyer.html"><img src="img/Dyer.jpg" alt="Dyer"></a>
                     <p>Dyer</p>
                 </div>
                 <div class="portfolio-item">
-                    <img src="img/Vicer.jpg" alt="Vicer">
+                    <a href="item-vicer.html"><img src="img/Vicer.jpg" alt="Vicer"></a>
                     <p>Vicer</p>
                 </div>
                 <div class="portfolio-item">
-                    <img src="img/Lyssa.jpg" alt="Lyssa">
+                    <a href="item-lyssa.html"><img src="img/Lyssa.jpg" alt="Lyssa"></a>
                     <p>Lyssa</p>
                 </div>
                 <div class="portfolio-item">
-                    <img src="img/Traston - Version 2.jpg" alt="Traston">
+                    <a href="item-traston.html"><img src="img/Traston - Version 2.jpg" alt="Traston"></a>
                     <p>Traston</p>
                 </div>
                 <div class="portfolio-item">
-                    <img src="img/Teryn Aetherson.jpg" alt="Teryn Aetherson">
+                    <a href="item-teryn-aetherson.html"><img src="img/Teryn Aetherson.jpg" alt="Teryn Aetherson"></a>
                     <p>Teryn Aetherson</p>
                 </div>
                 <div class="portfolio-item">
-                    <img src="img/Hush.jpg" alt="Hush">
+                    <a href="item-hush.html"><img src="img/Hush.jpg" alt="Hush"></a>
                     <p>Hush</p>
                 </div>
                 <div class="portfolio-item">
-                    <img src="img/Walton Parthall.jpg" alt="Walton Parthall">
+                    <a href="item-walton-parthall.html"><img src="img/Walton Parthall.jpg" alt="Walton Parthall"></a>
                     <p>Walton Parthall</p>
                 </div>
                 <div class="portfolio-item">
-                    <img src="img/Valthos - Version 1.jpg" alt="Valthos">
+                    <a href="item-valthos.html"><img src="img/Valthos - Version 1.jpg" alt="Valthos"></a>
                     <p>Valthos</p>
                 </div>
                 <div class="portfolio-item">
-                    <img src="img/Carmilla.jpg" alt="Carmilla">
+                    <a href="item-carmilla.html"><img src="img/Carmilla.jpg" alt="Carmilla"></a>
                     <p>Carmilla</p>
                 </div>
                 <div class="portfolio-item">
-                    <img src="img/The Masque.jpg" alt="The Masque">
+                    <a href="item-the-masque.html"><img src="img/The Masque.jpg" alt="The Masque"></a>
                     <p>The Masque</p>
                 </div>
             </section>
