--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
         <main>
             <section class="portfolio">
                 <div class="portfolio-item">
+                    <a href="item-daeron.html"><img src="img/Daeron.png" alt="Daeron"></a>
+                    <p>Daeron</p>
+                </div>
+                <div class="portfolio-item">
                     <a href="item-aemond-vhagar.html"><img src="img/Aemond.png" alt="Aemond & Vhagar"></a>
                     <p>Aemond & Vhagar</p>
                 </div>
