--- a/item-daeron.html
+++ b/item-daeron.html
@@ -27,9 +27,9 @@
 
         <main>
             <div class="portfolio-item-page">
-                <img src="img/Daeron.png" alt="Daeron">
+                <img src="img/Daeron.png" alt="Daeron Targaryen">
                 <div class="text-container">
-                    <span class="left-text">Daeron</span>
+                    <span class="left-text">Daeron Targaryen</span>
                 </div>
             </div>
         </main>
