--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <section class="portfolio">
                 <div class="portfolio-item">
                     <a href="item-daeron.html"><img src="img/Daeron.png" alt="Daeron"></a>
-                    <p>Daeron</p>
+                    <p>Daeron Targaryen</p>
                 </div>
                 <div class="portfolio-item">
                     <a href="item-aemond-vhagar.html"><img src="img/Aemond.png" alt="Aemond & Vhagar"></a>
